--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "engines": {
+    "node":"16.x"
+  },
   "scripts": {
     "start": "nodemon server.js"
   },
