--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,10 @@
 {
     "version": 2,
+    "name": "web",
     "builds": [
-{
-    "src" : "./server.js",
-    "use" : "@vercel/node"
-}
+       { "src": "server.js", "use": "@vercel/node" }
     ],
     "routes": [
-{
-    "src" : "/(.*)",
-    "dest" : "/"
-}
-    ],
-    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
-  }
-  
+       { "src": "/(.*)", "dest": "/server.js" }
+    ]
+ }
